objects/SVMXC__Page_Layout_Detail__c.object
<CustomObject>
    <description>This object is to store details of a page layout ex: Sections, Buttons, Fields etc</description>
    <fields>
        <fullName>SVMXC__Context_Source_Object__c</fullName>
        <description>Context field belongs to this object. Supported options are Current Record  &amp; Parent Record</description>
        <label>Context Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CURRENT_RECORD</fullName>
                </value>
                <value>
                    <fullName>PARENT_RECORD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Control_Type__c</fullName>
        <description>Type of control to be used in iPad client to capture data for this field. Applies to numeric fields</description>
        <inlineHelpText>Type of control to be used in iPad client to capture data for this field. Applies to numeric fields</inlineHelpText>
        <label>Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Spin</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__DataType__c</fullName>
        <label>DataType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Detail_Type__c</fullName>
        <description>Detail Type</description>
        <inlineHelpText>Detail Type</inlineHelpText>
        <label>Detail Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Display_Column__c</fullName>
        <description>Display Column</description>
        <inlineHelpText>Display Column</inlineHelpText>
        <label>Display Column</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Display_Row__c</fullName>
        <description>Display Row</description>
        <inlineHelpText>Display Row</inlineHelpText>
        <label>Display Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Enable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on this flag, chatter icon will be enabled for this lookup field in iPad client</description>
        <inlineHelpText>Based on this flag, chatter icon will be enabled for this lookup field in iPad client</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Field_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Mapping</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Page Layout Details (Field Mapping)</relationshipLabel>
        <relationshipName>Page_Layout_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Installation_Key__c</fullName>
        <description>Installation key used when seeding default page layout details</description>
        <inlineHelpText>Installation key used when seeding default page layout details</inlineHelpText>
        <label>Installation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsStandard</description>
        <inlineHelpText>IsStandard</inlineHelpText>
        <label>Is Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Lookup_Context__c</fullName>
        <description>Field Name of Lookup Context</description>
        <inlineHelpText>Field Name of Lookup Context</inlineHelpText>
        <label>Lookup Context</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Lookup_Query_Field__c</fullName>
        <description>This contains Field API name of Matching Field</description>
        <inlineHelpText>Lookup Query Field</inlineHelpText>
        <label>Lookup Query Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Maximum_Value__c</fullName>
        <description>Maximum value to be used in slider control on iPad client.</description>
        <inlineHelpText>Maximum value to be used in slider control on iPad client.</inlineHelpText>
        <label>Maximum Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Value__c</fullName>
        <description>Minimum value to be used in slider control on iPad client.</description>
        <inlineHelpText>Minimum value to be used in slider control on iPad client.</inlineHelpText>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Named_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to lookup config definition</description>
        <inlineHelpText>Reference to lookup config definition</inlineHelpText>
        <label>Lookup Config</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Page Layout Details</relationshipLabel>
        <relationshipName>Page_Layout_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__No_Of_Columns__c</fullName>
        <description>Number of columns for the section. Applies to header sections only.</description>
        <inlineHelpText>Number of columns for the section. Applies to header sections only.</inlineHelpText>
        <label>No Of Columns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Override_Related_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Related Lookup</description>
        <inlineHelpText>Override Related Lookup</inlineHelpText>
        <label>Override Related Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override (Not available for use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Page_Layout_Detail_Id__c</fullName>
        <description>Text Id for each page layout detail record.</description>
        <inlineHelpText>Text Id for each page layout detail record.</inlineHelpText>
        <label>Page Layout Detail Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Page_Layout__c</fullName>
        <description>Page Layout</description>
        <inlineHelpText>Page Layout</inlineHelpText>
        <label>Page Layout</label>
        <referenceTo>SVMXC__Page_Layout__c</referenceTo>
        <relationshipLabel>Page Layout Details</relationshipLabel>
        <relationshipName>Page_Layout_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__QuestionInfoJSON__c</fullName>
        <label>QuestionInfoJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>SVMXC__Question_Bank__c</referenceTo>
        <relationshipLabel>Page Layout Details</relationshipLabel>
        <relationshipName>Page_Layout_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Readonly</description>
        <inlineHelpText>Readonly</inlineHelpText>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Related_Object_Name_Field__c</fullName>
        <description>Related Object&apos;s Name Field</description>
        <inlineHelpText>Related Object&apos;s Name Field</inlineHelpText>
        <label>Related Object Name Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Related_Object_Name__c</fullName>
        <description>Related Object Name</description>
        <label>Related Object Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required</description>
        <inlineHelpText>Required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_Source_Field_API_Name__c</fullName>
        <description>Field to hold API name of the field mapped to the question</description>
        <inlineHelpText>Field to hold API name of the field mapped to the question</inlineHelpText>
        <label>Checklist Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Help_URL__c</fullName>
        <label>Help URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SVMXC__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Section</description>
        <inlineHelpText>Section</inlineHelpText>
        <label>Section</label>
        <referenceTo>SVMXC__Page_Layout_Detail__c</referenceTo>
        <relationshipLabel>Section</relationshipLabel>
        <relationshipName>Page_Layout_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Show_In_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show In Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Show_In_iPad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show In iPad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_For_SLA_Clock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this page layout section must be used for displaying SLA Clock in iPad client. Applies to header sections only.</description>
        <inlineHelpText>Indicates if this page layout section must be used for displaying SLA Clock in iPad client. Applies to header sections only.</inlineHelpText>
        <label>Use For SLA Clock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Width__c</fullName>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page Layout Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Layout Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>